<resources>
    <string name="app_name">Workoutic</string>
    <string name="workoutic_brand">Workoutic Brand</string>
    <string name="user_profile">User Profile</string>
    <string name="menu">Menu</string>
    <string name="exercises">Exercises</string>
    <string name="rutinas">Rutinas</string>
    <string name="chat">Chat</string>
    <string name="footer">Footer</string>
    <string name="seleccionar_parte_ejercicios">Selecciona una parte del cuerpo para ver los ejercicios</string>
    <string name="go_back">Go Back</string>
    <string name="human_body_front">Human Body Front</string>
    <string name="human_back">Human Back</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="log_in_sing_up">Log In</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="chat_menu">Chat</string>
    <string name="rutina">Rutina</string>
    <string name="hombro_izquierdo">Hombro Izquierdo</string>
    <string name="hombro_derecho">Hombro Derecho</string>
    <string name="pecho">Pecho</string>
    <string name="abdominales">Abdominales</string>
    <string name="brazo_izquierdo">Brazo Izquierdo</string>
    <string name="brazo_derecho">Brazo Derecho</string>
    <string name="muslos">Muslos</string>
    <string name="caderas">Caderas</string>
    <string name="gemelos">Gemelos</string>
    <string name="cuadriceps">Cuádriceps</string>
    <string name="h">H</string>
    <string name="brazo">B</string>
    <string name="deltoides">Deltoides</string>
    <string name="espalda">Espalda</string>
    <string name="abductores">Abductores</string>
    <string name="gluteos">Gluteos</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Chats">Chats</string>
    <string name="message">Escriba un mensaje...</string>
    <string name="Buscar_usuario">Buscar usuario...</string>
    <string name="img_abs_descrip">Imagen enfocada en Abdominales</string>
    <string name="img_arms_descrip">Imagen enfocada en Brazos</string>
    <string name="img_back_descrip">Imagen enfocada en Espalda</string>
    <string name="img_glutes_descrip">Imagen enfocada en Glúteos</string>
    <string name="img_waist_descrip">Imagen enfocada en Caderas</string>
    <string name="img_chest_descrip">Imagen enfocada en Pecho</string>
    <string name="img_legs_descrip">Imagen enfocada en Piernas</string>
    <string name="categoria">Categoria</string>
    <string name="info_icon" />
    <string name="information_icon">information icon</string>
    <string name="con_equipamiento">CON EQUIPAMIENTO</string>
    <string name="sin_equipamiento">SIN EQUIPAMIENTO</string>
    <string name="equipo">Equipo:</string>
    <string name="muscles">Músculos:</string>
    <string name="dificultad">Dificultad:</string>
    <string name="todo">TODO</string>
    <string name="welcome_screen_img">hombre y mujer levantando pesas</string>
    <string name="img_ejercicio_especifico">Imagen de demostración del ejercicio</string>
    <string name="nivel">Nivel:</string>
    <string name="equipamiento_se">Equipamiento:</string>
    <string name="add_exercise">Adicionar ejercicio a una rutina</string>
    <string name="welcome_img">Imagen de bienbenia a Workoutic</string>
    <string name="bienvenido_a_workoutic">Bienvenido a WORKOUTIC</string>
    <string name="dont">Do not exist</string>
    <string name="boton_mi_rutina">Boton Mi Rutina</string>
    <string name="boton_nueva_rutina">Boton Nueva Rutina</string>
    <string name="db_drop">DROP TABLE IF EXISTS</string>
    <string name="buscar_por_nombre">Buscar por nombre</string>
    <string name="ordenacion_descendente">Ordenacion Descendente</string>

    <string name="nombre_rutina">Introduce el nombre de la rutina</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="workoutic">WORKOUTIC</string>
    <string name="promotion">La mejor app de fitness para encontrar tu rutina y a tus compis del gym</string>
    <string name="nombre_de_la_rutina">Nombre de la rutina:</string>
    <string name="introduce_el_nombre">Introduce el nombre</string>
    <string name="_0">0</string>
    <string name="icon_pesa_cont_ejer">Icon de una pesa junto a un contador de ejercicios introducidos para el día</string>
    <string name="lunes">Lunes</string>
    <string name="editar">Editar</string>
    <string name="validar">Validar</string>
    <string name="nuevo">NUEVO</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="finalizar">Finalizar</string>
    <string name="descartar">Descartar</string>
    <string name="novato">Novato</string>
    <string name="nuevo_entrenado">Eres nuevo entrenado</string>
    <string name="medio">Medio</string>
    <string name="entren_reg">Has estado entrenando regularmente</string>
    <string name="experto">Experto</string>
    <string name="en_forma">Estás en forma y listo para un plan intensivo</string>
    <string name="selecciona_el_nivel_de_fitness">Selecciona el nivel de fitness</string>
    <string name="selec_cat">Selecciona la categoría</string>
    <string name="brazos">Brazos</string>
    <string name="b_ceps_tr_ceps_y_m_s">Bíceps, tríceps y más</string>
    <string name="torso">Torso</string>
    <string name="hombro_pecho_espalda_y_m_s">Hombro, pecho, espalda y más</string>
    <string name="abs">Abdominales</string>
    <string name="abdomen_y_oblicuos">Abdomen y oblicuos</string>
    <string name="piernas">Piernas</string>
    <string name="cu_driceps_femoral_aductores_y_m_s">Cuádriceps, femoral, aductores y más</string>
    <string name="gl_teos">Glúteos</string>
    <string name="gl_teos_mayor_mediano_y_menor">Glúteos mayor, mediano y menor</string>
    <string name="sugeridos">Sugeridos:</string>
    <string name="series">Series:</string>
    <string name="peso">Peso:</string>
    <string name="repeticiones">Repeticiones:</string>
    <string name="detalles">Detalles</string>
    <string name="helper_sel_exercises">Selecciona un ejercicio haciendo click sobre él</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="categor_a">Categoría</string>
    <string name="peso_en_kg">Peso en kg</string>
    <string name="add">add</string>
    <string name="decrease">decrease</string>
    <string name="series_e_r">Series</string>
    <string name="validate_name_error_msg">Debes introducir un nombre válido</string>
    <string name="d">D</string>
    <string name="s">S</string>
    <string name="v">V</string>
    <string name="j">J</string>
    <string name="m">M</string>
    <string name="mart">M</string>
    <string name="l">L</string>
    <string name="menu_exer">Menu de ejercicio</string>
    <string name="compartir_ejercicio">Compartir</string>
    <string name="compartir_ejercicio_txt">Compartir ejercicio</string>
    <string name="modificar_ejercicio">Modificar ejercicio</string>
    <string name="mod_ejercicio">Modificar</string>
    <string name="eliminar_ejercicio">Eliminar ejercicio</string>
    <string name="details">Detalles</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar_rutina">Eliminar Rutina</string>
    <string name="modificar_rutina">Modificar Rutina</string>
    <string name="compartir_rutina">Compartir Rutina</string>
    <string name="menu_de_rutinas">Menu de rutinas</string>
    <string name="msg_nombre_rutina_toast">Debes darle un nombre a la rutina antes de añadir ejercicios</string>
    <string name="tiempo_en_min">Tiempo en min</string>
    <string name="tiempo">Tiempo:</string>
    <string name="msg_err_series_no_int">El valor introducido en SERIES debe ser un número entero</string>
    <string name="msg_err_rep_no_int">El número de repeticiones debe ser un número entero</string>
    <string name="msg_err_peso_no_number">El peso debe ser un número</string>
    <string name="msg_err_time_no_number">El tiempo debe ser un número</string>
    <string name="d_a_de_la_semana">Día de la semana</string>
    <string name="msg_err_day">Día de la semana incorrecto</string>
    <string name="msg_sucsess_act">Ejercicio Actualizado</string>
    <string name="msg_sucsess_add">Ejercicio añadido a la rutina</string>
    <string name="msg_sucsess_rout_add">Rutina añadida</string>
    <string name="msg_sucsess_rout_mod">Rutina modificada</string>
    <string name="login_txt">Login</string>
    <string name="email_txt">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">login</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="auth_failed">!Usuario o contraseña incorrectos!</string>
    <string name="log_success">TE HAS LOGEADO CRUCK</string>
    <string name="email_pass_void">Debes rellenar los campos de email y contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="foto">Foto</string>
    <string name="crear_nueva_cuenta">Crear nueva cuenta</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="msg_regist_void">Debes llenar todos los campos pedidos</string>
    <string name="msg_six_caracters">La contraseña debe tener al menos 6 caracteres</string>
    <string name="msg_dif_password">Las contraseñas introducidas son diferentes</string>
    <string name="buscar_rutina">Buscar rutina</string>
    <string name="no_se_encontraron_ejercicios">No se encontraron ejercicios</string>
    <string name="new_acount">Crear un cuenta</string>
    <string name="msg_err_register">No puedes registrarte con ese nombre de usuario o email</string>
    <string name="user_added">🥳🥳🥳 USUARIO AÑADIDO 🥳🥳🥳</string>
    <string name="logout">Log out</string>
    <string name="option_yes">CONTINUAR</string>
    <string name="option_no">CANCELAR</string>
    <string name="tag_dialog_delete_er">DeleteER</string>
    <string name="tag_delete_routine">DeleteRoutine</string>
    <string name="no_routines">No se encontraron rutinas</string>
    <string name="nuevo_mensaje">¡Nuevo Mensaje!</string>
    <string name="icon">Icon de usuario</string>
    <string name="choose_an_option">Elija una opción</string>
    <string name="take_picture">Hacer foto</string>
    <string name="select_image">Seleccionar imagen</string>
    <string name="select_an_image">Seleccione una imagen</string>
    <string name="share">Compartir</string>
    <string name="delete">Borrar</string>
</resources>