<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_item_exercises_routine_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_card_item_exercises_routine_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@drawable/burpies" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_card_item_exercises_routine_title_view"
                        style="@style/card_item_text_2_bold"
                        android:layout_marginBottom="10dp"
                        android:text="@string/todo"
                        android:textColor="@color/brand_c2" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/ic_exercises_routine_item_view_menu_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_menu_routines"
                        android:contentDescription="@string/menu_exer" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_card_item_exercises_routine_menu_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:visibility="visible">

                    <LinearLayout
                        android:id="@+id/btn_menu_item_exercise_routine_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView16"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/compartir_ejercicio"
                            app:srcCompat="@drawable/ic_baseline_share"
                            tools:ignore="InefficientWeight" />

                        <TextView
                            style="@style/card_item_inf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/compartir_ejercicio_txt" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_menu_item_exercise_routine_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView17"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/mod_ejercicio"
                            app:srcCompat="@drawable/ic_baseline_edit_items_menu"
                            tools:ignore="InefficientWeight" />

                        <TextView
                            style="@style/card_item_inf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/modificar_ejercicio" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_menu_item_exercise_routine_delete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageView18"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/eliminar"
                            app:srcCompat="@drawable/ic_baseline_delete_outline"
                            tools:ignore="InefficientWeight" />

                        <TextView
                            style="@style/card_item_inf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/eliminar_ejercicio" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_card_item_exercises_routine_data_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    tools:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_card_item_exercises_routine_cat_2_view"
                            style="@style/card_item_text_2_bold"
                            android:text="@string/series"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txt_card_item_exercises_routine_series_view"
                            style="@style/card_item_inf"
                            android:layout_width="wrap_content"
                            android:text="@string/todo" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_card_item_exercises_routine_cat_4_view"
                            style="@style/card_item_text_2_bold"
                            android:layout_height="wrap_content"
                            android:text="@string/repeticiones"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txt_card_item_exercises_routine_rep_view"
                            style="@style/card_item_inf"
                            android:layout_height="wrap_content"
                            android:text="@string/todo" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_card_item_exercises_routine_cat_3_view"
                            style="@style/card_item_text_2_bold"
                            android:text="@string/peso"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txt_card_item_exercises_weight_view"
                            style="@style/card_item_inf"
                            android:text="@string/todo" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_card_item_exercises_routine_cat_5_view"
                            style="@style/card_item_text_2_bold"
                            android:text="@string/tiempo"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txt_card_item_exercises_time_view"
                            style="@style/card_item_inf"
                            android:text="@string/todo" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly_exercise_routine_especific_exercise_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/play_bold"
                            android:text="@string/detalles"
                            android:textColor="@color/brand_c2" />

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/details"
                            app:srcCompat="@drawable/ic_baseline_add_details" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>