<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_shape"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_title_shape"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/brand_ws" />

    <TextView
        android:id="@+id/dialog_msg_act_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/todo"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_msg_specific_message_op1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:paddingStart="40dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:text="@string/todo"
        android:textColor="@color/secondary_MenuBar"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_msg_specific_message_op2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:paddingStart="40dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:text="@string/todo"
        android:textColor="@color/secondary_MenuBar"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <LinearLayout
            android:id="@+id/btn_msg_option_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/screen_background_light_transparent"
            android:padding="15dp">

            <TextView
                android:id="@+id/btn_msg_option_negative_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play_bold"
                android:text="@string/option_no"
                android:textColor="@color/brand_c2" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>